--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fireworks Animation with Trails and Explosions</title>
+    <title>Web alfa</title>
     <style>
         body, html {
             margin: 0;
@@ -25,10 +25,11 @@
     </style>
 </head>
 <body>
-    <h1>UNDER CONSTRUCTION</h1>
-    <p>I'm hosted with GitHub Pages.</p>
     <canvas id="fireworksCanvas"></canvas>
-    <img src="https://64.media.tumblr.com/f0da7c50d726e64c6c0d8a985240b6f4/dfbbb68a95adf2d4-ce/s250x400/afe73dd5883647200c53408018ed3be99b567b80.gif" alt="work" class="center">
+    <div class="center">
+        <h1>UNDER CONSTRUCTION</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </div>
     <script>
   const canvas = document.getElementById('fireworksCanvas');
   const ctx = canvas.getContext('2d');
