--- a/index.html
+++ b/index.html
@@ -1,182 +1,215 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Web alfa</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: black;
-        }
-
-        canvas {
-            display: block;
-        }
-
-        .center {
-            /*position: absolute;*/
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 25%;
-        }
+  <meta charset="UTF-8">
+  <title>Osobní web</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;600;800&display=swap');
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Exo 2', sans-serif;
+      color: white;
+      overflow: hidden;
+    }
+    .wrapper {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      background-color: rgba(59, 59, 59, 0.625);
+      width: 50%;
+      margin: 100px auto auto auto;
+      border-radius: 15px;
+      backdrop-filter: blur(5px);
+    }
+    #fireworksCanvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background-color: black;
+    }
+    .content {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      max-width: 600px;
+    }
+    .content h1 {
+      margin-bottom: 0.5rem;
+      font-size: 2rem;
+    }
+    .content p {
+      font-size: 1.2rem;
+      line-height: 1.4;
+    }
+    .content img {
+      height: 128px;
+      width: 128px;
+    }
     </style>
 </head>
 <body>
     <canvas id="fireworksCanvas"></canvas>
-    <div class="center">
+    <div class="wrapper">
+      <div class="content">
         <h1>UNDER CONSTRUCTION</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <img src="web/img/peng.png" alt="Penguin at work!">
+      </div>
     </div>
     <script>
-  const canvas = document.getElementById('fireworksCanvas');
-  const ctx = canvas.getContext('2d');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+      const canvas = document.getElementById("fireworksCanvas");
+      const ctx    = canvas.getContext('2d');
+      canvas.width  = window.innerWidth;
+      canvas.height = window.innerHeight;
+  
+      const colors = [
+        "rgb(64, 226, 160)",   // △
+        "rgb(255, 102, 102)",  // ○
+        "rgb(124, 178, 232)",  // ✕
+        "rgb(255, 105, 248)"   // ◻
+      ];
+  
+      let fireworks = [];
+      const MAX_FIRE = 3;
+  
+      class Particle {
+        constructor(x, y, color, velocity) {
+          this.x = x; this.y = y;
+          this.color = color;
+          this.velocity = velocity;
+          this.alpha = 1;
+          this.friction = 1;
+          this.gravity = 0.025;
+        }
+  
+        update() {
+          this.velocity.x *= this.friction;
+          this.velocity.y *= this.friction;
+          this.velocity.y += this.gravity;
+          this.x += this.velocity.x;
+          this.y += this.velocity.y;
+          this.alpha -= 0.005;
+        }
+  
+        draw() {
+          ctx.save();
+          ctx.globalAlpha = this.alpha;
+          ctx.fillStyle = this.color;
+  
+          if (this.color === "rgb(124, 178, 232)") {
+            ctx.font = "48px Arial";
+            ctx.fillText("✕", this.x, this.y);
+          }
+          else if (this.color === "rgb(255, 102, 102)") {
+            ctx.font = "64px Arial";
+            ctx.fillText("○", this.x, this.y);
+          }
+          else if (this.color === "rgb(255, 105, 248)") {
+            ctx.font = "48px Arial";
+            ctx.fillText("◻", this.x, this.y);
+          }
+          else if (this.color === "rgb(64, 226, 160)") {
+            ctx.font = "48px Arial";
+            ctx.fillText("△", this.x, this.y);
+          }
+  
+          ctx.restore();
+        }
+      }
+  
+      class Firework {
+        constructor(x, y, targetY, color) {
+          this.x = x;
+          this.y = y;
+          this.targetY = targetY;
+          this.color = color;
+          this.particles = [];
+          this.exploded = false;
 
-  let fireworks = [];
-
-  class Firework {
-    constructor(x, y, targetY, color) {
-      this.x = x;
-      this.y = y;
-      this.targetY = targetY;
-      const colors = ["rgb(64, 226, 160)", "rgb(255, 102, 102)", "rgb(124, 178, 232)", "rgb(255, 105, 248)"];
-      this.color = colors[Math.floor(Math.random() * colors.length)];
-      this.particles = [];
-      this.exploded = false;
-
-      const minAngle = 2;
-      const maxAngle = 1;
-      const angle = Math.random() * (maxAngle - minAngle) + minAngle;
-      //const angle = 2;
-      const speed = 5;
-      this.velocity = {
+          const minAngle = 1;
+          const maxAngle = 2;
+          const angle = Math.random() * (maxAngle - minAngle) + minAngle;
+          const speed = 5;
+          this.velocity = {
             x: Math.cos(angle) * speed,
             y: -Math.sin(angle) * speed
-      };
-    }
-
-    explode() {
-      for (let i = 0; i < 100; i++) {
-        const angle = Math.random() * Math.PI * 10;
-        const speed = Math.random() * 4 + 0.5;
-        this.particles.push(new Particle(this.x, this.y, this.color, {
-          x: Math.cos(angle) * speed,
-          y: Math.sin(angle) * speed
-        }));
-      }
-      this.exploded = true;
-    }
-
-    update() {
-      if (!this.exploded) {
-        this.x += this.velocity.x;
-        this.y += this.velocity.y;
-
-        if (this.y <= this.targetY) {
-          this.explode();
+          };
+        }
+  
+        explode() {
+          for (let i = 0; i < 100; i++) {
+            const ang = Math.random() * Math.PI * 2;
+            const spd = Math.random() * 4 + 0.5;
+            this.particles.push(new Particle(
+              this.x, this.y, this.color,
+              { x: Math.cos(ang) * spd, y: Math.sin(ang) * spd }
+            ));
+          }
+          this.exploded = true;
+        }
+  
+        update() {
+          if (!this.exploded) {
+            this.x += this.velocity.x;
+            this.y += this.velocity.y;
+            if (this.y <= this.targetY) {
+              this.explode();
+            }
+          } else {
+            this.particles.forEach(p => p.update());
+            this.particles = this.particles.filter(p => p.alpha > 0);
+          }
+        }
+  
+        draw() {
+          if (!this.exploded) {
+            ctx.fillStyle = this.color;
+            ctx.beginPath();
+            ctx.arc(this.x, this.y, 3, 0, Math.PI * 2);
+            ctx.fill();
+          }
+          this.particles.forEach(p => p.draw());
         }
       }
-
-      this.particles.forEach(particle => particle.update());
-      this.particles = this.particles.filter(particle => particle.alpha > 0);
-    }
-
-    draw() {
-      if (!this.exploded) {
-        ctx.fillStyle = this.color;
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, 3, 0, Math.PI * 3);
-        ctx.fill();
-      }
-
-      this.particles.forEach(particle => particle.draw());
-    }
-  }
-
-  class Particle {
-    constructor(x, y, color, velocity) {
-      this.x = x;
-      this.y = y;
-      this.color = color;
-      this.velocity = velocity;
-      this.alpha = 1;
-      this.friction = 1;
-      this.gravity = 0.025;
-    }
-
-    update() {
-      this.velocity.x *= this.friction;
-      this.velocity.y *= this.friction;
-      this.velocity.y += this.gravity;
-      this.x += this.velocity.x;
-      this.y += this.velocity.y;
-      this.alpha -= 0.005;
-    }
-
-    draw() {
-      ctx.save();
-      ctx.globalAlpha = this.alpha;
-      ctx.fillStyle = this.color;
-      //ctx.beginPath();
-      //ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
-      //ctx.fillRect(this.x, this.y, 100, 100);
-      //ctx.clearRect(this.x, this.y, 60, 60);
-      if (this.color == "rgb(124, 178, 232)") {
-            ctx.font = "48px arial";
-            ctx.fillText("✕", this.x, this.y, 100, 100); //◻△✕○
-        }
-      if (this.color == "rgb(255, 102, 102)") {
-            ctx.font = "64px arial";
-            ctx.fillText("○", this.x, this.y, 100, 100); //◻△✕○
-        }
-      if (this.color == "rgb(255, 105, 248)") {
-            ctx.font = "48px arial";
-            ctx.fillText("◻", this.x, this.y, 100, 100); //◻△✕○
-        }
-      if (this.color == "rgb(64, 226, 160)") {
-            ctx.font = "48px arial";
-            ctx.fillText("△", this.x, this.y, 100, 100); //◻△✕○
-        }
-      ctx.fill();
-      ctx.restore();
-    }
-  }
-
-  function animate() {
-    requestAnimationFrame(animate);
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.2)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    fireworks.forEach((firework, index) => {
-      firework.update();
-      firework.draw();
-      if (firework.exploded && firework.particles.length === 0) {
-        fireworks.splice(index, 1);
-      }
-    });
-  }
-  const maxfire = 3
-  function spawnFireworks() {
-      if (fireworks.length < maxfire) {
+  
+      function spawnFirework() {
+        if (fireworks.length < MAX_FIRE) {
           const x = Math.random() * canvas.width;
           const y = canvas.height;
           const targetY = Math.random() * canvas.height / 2;
-          fireworks.push(new Firework(x, y, targetY));
+          const color = colors[Math.floor(Math.random() * colors.length)];
+          fireworks.push(new Firework(x, y, targetY, color));
+        }
       }
-  }
-    /*const x = Math.random() * canvas.width;
-    const y = canvas.height;
-    const targetY = Math.random() * canvas.height / 2;
-    const color = ["rgb(64, 226, 160)", "rgb(255, 102, 102)", "rgb(124, 178, 232)", "rgb(255, 105, 248)"];
-    fireworks.push(new Firework(x, y, targetY, color));
-  }*/
-
-  animate();
-  setInterval(spawnFireworks, 1000);
+  
+      function animate() {
+        requestAnimationFrame(animate);
+        ctx.globalCompositeOperation = 'source-over';
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+  
+        fireworks.forEach((fw, i) => {
+          fw.update();
+          fw.draw();
+          if (fw.exploded && fw.particles.length === 0) {
+            fireworks.splice(i, 1);
+          }
+        });
+      }
+  
+      setInterval(spawnFirework, 1000);
+      animate();
     </script>
 </body>
 </html>
