--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Osobní web</title>
   <link rel="stylesheet" href="web/css/style.css">
+  <script src="web/js/background.js"></script>
 </head>
+
 <body>
-    <canvas id="fireworksCanvas"></canvas>
-    <div class="wrapper">
-      <div class="content">
-        <h1>UNDER CONSTRUCTION</h1>
-        <img src="web/img/peng.png" alt="Penguin at work!">
-      </div>
+  <canvas id="fireworksCanvas"></canvas>
+  <nav>
+    <a class ="navlink" href="https://github.com/vl4sty/"><img src="web/img/gitico.png" alt="Penguin at work!">vl4sty Github</a>
+  </nav>
+  <div class="wrapper">
+    <div class="content">
+      <h1>UNDER CONSTRUCTION</h1>
+      <h1>⚠️ TO DO ⚠️</h1>
+      <p>🛠️- Update the main div, add footer</p>
+      <p>🛠️- Revamp the looks of the page, add some more neat features</p>
+      <p>🛠️- Fix for Webkit browsers (i.e. Apple Trashafari)</p>
+      <p>🛠️- Code in responsivity</p>
+      <p>🛠️- add in the content</p>
+      <p>🛠️- implement Github REST api</p>
+      <img src="web/img/peng.png" alt="Penguin at work!">
     </div>
-    <script src="web/js/background.js"></script>
+  </div>
 </body>
+
 </html>
