Added responsive footer
Added main wrapper, footer, changed the fireworks script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Osobní web</title>
+  <link rel="icon" href="web/img/webico/webico2.PNG">
   <link rel="stylesheet" href="web/css/style.css">
   <script src="web/js/background.js"></script>
 </head>
@@ -11,20 +12,33 @@
 <body>
   <canvas id="fireworksCanvas"></canvas>
   <nav>
-    <a class ="navlink" href="https://github.com/vl4sty/"><img src="web/img/gitico.png" alt="Penguin at work!">vl4sty Github</a>
+    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/gitico.png" alt="Penguin at work!">vl4sty
+      Github</a>
+    <a id="home" href="#"><svg id="home-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+        viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round">
+        <path d="M3 11L12 4l9 7v9a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-9z" />
+      </svg>
+    </a>
   </nav>
-  <div class="wrapper">
-    <div class="content">
-      <h1>UNDER CONSTRUCTION</h1>
-      <h1>⚠️ TO DO ⚠️</h1>
-      <p>🛠️- Update the main div, add footer</p>
-      <p>🛠️- Revamp the looks of the page, add some more neat features</p>
-      <p>🛠️- Fix for Webkit browsers (i.e. Apple Trashafari)</p>
-      <p>🛠️- Code in responsivity</p>
-      <p>🛠️- add in the content</p>
-      <p>🛠️- implement Github REST api</p>
-      <img src="web/img/peng.png" alt="Penguin at work!">
+  <div id="main">
+    <div class="wrapper">
+      <div class="content">
+        <h1>UNDER CONSTRUCTION</h1>
+        <h1>⚠️ TO DO ⚠️</h1>
+        <p>✅- Update the main div, add footer</p>
+        <p>🛠️- Revamp the looks of the page, add some more neat features</p>
+        <p>✅- Fix for Webkit browsers (i.e. Apple Trashafari)</p>
+        <p>🛠️- Code in responsivity aka mobile version</p>
+        <p>🛠️- add in the content</p>
+        <p>🛠️- implement Github REST api</p>
+        <p>🛠️- fireworks need a width and height re-check, when window is resized, the particles are stretched</p>
+        <img src="web/img/peng.png" alt="Penguin at work!">
+      </div>
     </div>
+    <footer>
+      <h1>⚠️ Work in progress ⚠️ Copyright 2025</h1>
+    </footer>
   </div>
 </body>
 
