Added meta tag for phones
Meta tag theme-color added for mobile phones

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Osobní web</title>
+  <meta name="theme-color" content="#000000">
   <link rel="icon" href="web/img/webico/webico2.PNG">
   <link rel="stylesheet" href="web/css/style.css">
   <script src="web/js/background.js"></script>
