--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 <body>
   <canvas id="fireworksCanvas"></canvas>
   <nav>
-    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/gitico.png" alt="Penguin at work!">vl4sty
-      Github</a>
-    <a id="home" href="#"><svg id="home-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48"
-        viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"
-        stroke-linejoin="round">
+    <h1>Osobní webík 😇</h1>
+    <div id="separator"></div>
+    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/gptux.jpg" alt="Penguin at work!">Game patches <br/>(21:9, other)</a>
+    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/tux.png" alt="tux closeup">Linux Guides</a>
+    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/webico/webico1.PNG" alt="material">Škola</a>
+    <a class="navlink" href="https://github.com/vl4sty/"><img src="web/img/gitico.png" alt="Penguin at work!">My Git</a>
+    <a id="home" href="https://vl4sty.github.io/"><svg id="home-icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M3 11L12 4l9 7v9a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-9z" />
+      </svg>
+    </a>
+    <a href="#"><svg id="home-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="12" y1="19" x2="12" y2="5" />
+        <polyline points="5 12 12 5 19 12" />
       </svg>
     </a>
   </nav>
